[Extensions UI] Fix a bug in the extension message bubbles

We weren't calling OnShown(), so message bubbles weren't recording that they
were displayed for a given profile. Fix, and add a regression test.

BUG=607099
TBR=avi@chromium.org (micro change to extension_message_bubble_browsertest_mac.mm)

Review-Url: https://codereview.chromium.org/1936763002
Cr-Commit-Position: refs/heads/master@{#391305}

Former-commit-id: 6b011081f35728dd3bcebc4fe894ed2542d960da