chrome/browser/ui/cocoa/extensions/extension_message_bubble_browsertest_mac.mm
@@ -152,3 +152,8 @@ IN_PROC_BROWSER_TEST_F(ExtensionMessageBubbleBrowserTestMac,
                        TestUninstallDangerousExtension) {
   TestUninstallDangerousExtension();
 }
+
+IN_PROC_BROWSER_TEST_F(ExtensionMessageBubbleBrowserTestMac,
+                       TestDevModeBubbleIsntShownTwice) {
+  TestDevModeBubbleIsntShownTwice();
+}
