chrome/browser/ui/views/extensions/extension_message_bubble_view_browsertest.cc
@@ -122,3 +122,8 @@ IN_PROC_BROWSER_TEST_F(ExtensionMessageBubbleViewBrowserTest,
                        TestUninstallDangerousExtension) {
   TestUninstallDangerousExtension();
 }
+
+IN_PROC_BROWSER_TEST_F(ExtensionMessageBubbleViewBrowserTest,
+                       TestDevModeBubbleIsntShownTwice) {
+  TestDevModeBubbleIsntShownTwice();
+}
